# health_wellness_agent

./: .gitignore  README.md  main.py  pyproject.toml
src/health_wellness_agent/: agent.py  config.py  context.py  conversation.py  guardrails.py  hooks.py
src/health_wellness_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/health_wellness_agent/agents/: escalation_agent.py  injury_support_agent.py  nutrition_expert_agent.py
src/health_wellness_agent/dashboard/: app.py
src/health_wellness_agent/database/: db.py  models.py  state_manager.py
src/health_wellness_agent/tools/: base.py  base_tool.py  goal_analyzer.py  meal_planner.py  scheduler.py  tracker.py  workout_recommender.py
src/health_wellness_agent/utils/: error_handler.py  streaming.py
src/health_wellness_agent/utils/reports/: pdf_generator.py
streamlit-env/: pyvenv.cfg
streamlit-env/Scripts/: activate  activate.bat
