[project]
name = "health-wellness-agent"
version = "0.1.0"
description = "AI-powered health and wellness assistant"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.7",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "openai>=1.3.0",
    
    # New dependencies for enhanced features
    "asyncio>=3.4.3",             # For async operations
    "aiohttp>=3.8.0",             # For async HTTP
    "websockets>=10.0",           # For real-time streaming
    "python-dateutil>=2.8.2",     # For date handling
    "typing-extensions>=4.0.0",    # For advanced type hints
    "rich>=12.0.0",               # For better console output
    "pytest>=7.0.0",              # For testing
    "pytest-asyncio>=0.20.0",      # For async tests
    "openai-sdk (==0.1.0)"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
